--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,13 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdkVersion 31
+    buildToolsVersion "30.0.1"
 
     defaultConfig {
         applicationId "hcmute.edu.vn.zaloapp"
-        minSdk 21
-        targetSdk 32
+        minSdkVersion 23
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -32,7 +33,7 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -55,6 +56,11 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+
+    implementation ('org.jitsi.react:jitsi-meet-sdk:2.+') { transitive = true }
+
+    implementation 'com.devlomi.record-view:record-view:2.0.1'
+
 
 
 }
